crates/pgls_splinter/tests/snapshots/no_issues.snap
---
source: crates/pgls_splinter/tests/diagnostics.rs
expression: content
snapshot_kind: text
---
No Diagnostics
