crates/pgls_splinter/tests/snapshots/policy_exists_rls_disabled.snap
---
source: crates/pgls_splinter/tests/diagnostics.rs
expression: content
snapshot_kind: text
---
Category: splinter/security/policyExistsRlsDisabled
Severity: Error
Message: Table \`public.documents\` has RLS policies but RLS is not enabled on the table. Policies include {documents_policy}.
Advices:
Detects cases where row level security (RLS) policies have been created, but RLS has not been enabled for the underlying table.
[Info] table: public.documents
[Info] Remediation: https://supabase.com/docs/guides/database/database-linter?lint=0007_policy_exists_rls_disabled
